style.css
/*
Theme Name: Gruene Theme
Theme URI: https://github.com/cyrillbolliger/wp-theme-gruene-ch
Version: 1.4.2
Author: Cyrill Bolliger
Description: Theme for the green parties and politicians of Switzerland. Based on _s. Responsive, retina compatible, parent theme, pluggable
GitHub Theme URI: cyrillbolliger/wp-theme-gruene-ch
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Text Domain: gruene
*/

/*
This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned with others.

Gruene Theme is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
Underscores is distributed under the terms of the GNU GPL v2 or later.

Normalizing styles have been helped along thanks to the fine work of
Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
*/

/*--------------------------------------------------------------
>>> TABLE OF CONTENTS:
----------------------------------------------------------------
# Normalize
# Typography
# Links
# Elements
# Forms
# Header
# Menus
# Slider
# Accessibility
# Alignments
# Clearings
# Widgets
# Content
	## Posts and pages
	## Asides
	## Comments
# Footer
# Infinite scroll
# Media
	## Captions
	## Galleries
# Widgets Content
# Hide'n'show
--------------------------------------------------------------*/

/*--------------------------------------------------------------
# Normalize
--------------------------------------------------------------*/
html
	{ font-family: 'Tahoma', 'Verdana', 'Segoe', 'sans-serif'; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; 
	  font-size: 16px !important; }
	
body
	{ margin: 0; font-size: 16px !important; }
	
article, aside, details, figcaption, figure, footer, header, main, menu, nav, section, summary
	{ display: block; }
	
audio, canvas, progress, video
	{ display: inline-block; vertical-align: baseline; }
	
audio:not([controls])
	{ display: none; height: 0; }
	
[hidden], template
	{ display: none; }
a
	{ background-color: transparent; }
	
a:active, a:hover
	{ outline: 0; }
	
abbr[title]
	{ border-bottom: 1px dotted; }
	
b, strong
	{ font-weight: bold; }
	
dfn
	{ font-style: italic; }
	
h1
	{ font-size: 1.5em; }

h2
	{ font-size: 1.25em; }

h3
	{ font-size: 1em; }

mark
	{ background: #ff0; color: #000; }
	
small
	{ font-size: 80%; }
	
sub, sup
	{ font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
	
sup
	{ top: -0.5em; }
	
sub
	{ bottom: -0.25em; }
	
img
	{ border: 0; }
	
svg:not(:root)
	{ overflow: hidden; }
	
figure
	{  }
	
hr
	{ box-sizing: content-box; height: 0; }
	
pre
	{ overflow: auto; }
	
code, kbd, pre, samp
	{ font-family: monospace, monospace; font-size: 1em; }
	
button, input, optgroup, select, textarea
	{ color: inherit; font: inherit; margin: 0; }
	
button
	{ overflow: visible; }
	
button, select
	{ text-transform: none; }
	
button, html input[type="button"], input[type="reset"], input[type="submit"]
	{ -webkit-appearance: button; cursor: pointer; }
	
button[disabled], html input[disabled]
	{ cursor: default; }
	
button::-moz-focus-inner, input::-moz-focus-inner
	{ border: 0; padding: 0; }
	
input
	{ line-height: normal; }
	
input[type="checkbox"], input[type="radio"]
	{ box-sizing: border-box; padding: 0; }
	
input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-outer-spin-button
	{ height: auto; }
	
input[type="search"]
	{ -webkit-appearance: textfield; box-sizing: content-box; }
	
input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration
	{ -webkit-appearance: none; }
	
fieldset
	{ border: 1px solid #c0c0c0; margin: 0 2px; padding: 0.35em 0.625em 0.75em; }
	
legend
	{ border: 0; padding: 0; }
	
textarea
	{ overflow: auto; }
	
optgroup
	{ font-weight: bold; }
	
table
	{ border-collapse: collapse; border-spacing: 0; }
	
td, th
	{ padding: 0; }

/*--------------------------------------------------------------
# Typography
--------------------------------------------------------------*/
body, button, input, select, textarea 
	{ color: #404040; font-size: 15px; font-size: 0.9375rem; line-height: 1.5; }
	
h1, h2, h3, h4, h5, h6 
	{ clear: both; }

h1, h2, h3, h1 a, h2 a, h3 a
	{ line-height: 1.5em; color: #e10078; margin: 0.67em 0; text-decoration: none; }
	
p 
	{ margin-bottom: 1.5em; }
	
dfn, cite, em, i 
	{ font-style: italic; }
	
blockquote 
	{ margin: 0 1.5em; }
	
address 
	{ margin: 0 0 1.5em; }
	
pre 
	{ background: #eee; font-family: "Courier 10 Pitch", Courier, monospace; font-size: 15px; font-size: 0.9375rem; line-height: 1.6; margin-bottom: 1.6em; max-width: 100%; overflow: auto; padding: 1.6em; }
	
code, kbd, tt, var 
	{ font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace; font-size: 15px; font-size: 0.9375rem; }
	
abbr, acronym 
	{ border-bottom: 1px dotted #666; cursor: help; }
	
 mark, ins 
	{ background: #fff9c0; text-decoration: none; }
	
big 
	{ font-size: 125%; }

/*--------------------------------------------------------------
## Links
--------------------------------------------------------------*/
a
	{ color: #3a7a01; text-decoration: underline; }
	
a:visited
	{ color: #305f05; }
	
a:hover, a:focus, a:active
	{ color: #e10078; text-decoration: none; }

a:focus
	{ outline: thin dotted; }
	
a:hover, a:active
	{ outline: 0; }

/*--------------------------------------------------------------
# Elements
--------------------------------------------------------------*/
html 
	{ box-sizing: border-box; }
	
*, *:before, *:after 
	{ /* Inherit box-sizing to make it easier to change the property for components that leverage other behavior; see http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */  box-sizing: inherit; }
	
body 
	{ background: #84b414; background: #84b414 radial-gradient(1000px at 50% -50% , rgba(0, 0, 0, 0.25) 0, rgba(0, 0, 0, 0) 100%) no-repeat scroll top center; }
/* ... */

